discussion/kv_engine/139031/139031_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Use std::chrono::microseconds instead of useconds_t

Change-Id: I71c60509425df3218cb54fdad3ce0ba91df41ae4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-10-27 19:09:59.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-27 19:21:02.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5310/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:46:43: error: expected ")" [clang-diagnostic-error]
                                          max_sleep_time) {
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:43:34: note: to match this "("
static bool wait_for_mapped_below(const cb::ArenaMallocClient& client,
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:47:31: error: redefinition of "sleepTime" [clang-diagnostic-error]
    std::chrono::microseconds sleepTime{128};
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:45:61: note: previous definition is here
                                  std::chrono::microseconds sleepTime
                                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:53:30: error: use of undeclared identifier "max_sleep_time" [clang-diagnostic-error]
        if (totalSleepTime > max_sleep_time) {
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5310/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/defragmenter_test.cc:46:43:
error: expected ")" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5310/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27107/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/ep_test_apis.h:650:9:
error: call to "decayingSleep" is ambiguous
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27107/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31391/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\tests\ep_test_apis.h(669): error C2668: "decayingSleep": ambiguous call to overloaded function ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31391/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5723/ : FAILURE

Compile error at [2020-10-27T19:12:03.281Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:650:9:
error: call to "decayingSleep" is ambiguous
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5723/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6944/ : FAILURE

Compile error at [2020-10-27T19:10:51.223Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:650:9:
error: call to "decayingSleep" is ambiguous
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6944/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6655/ : FAILURE

Compile error at [2020-10-27T19:17:41.106Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:650:32:
error: call of overloaded ?decayingSleep(std::chrono::microseconds&)? is ambiguous
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6655/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14583/ : FAILURE

Compile error at [2020-10-27T19:14:48.519Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:650:9:
error: call to "decayingSleep" is ambiguous
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14583/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6775/ : FAILURE

Compile error at [2020-10-27T19:11:08.470Z] ../kv_engine/engines/ep/tests/ep_test_apis.h:650:32:
error: call of overloaded ?decayingSleep(std::chrono::microseconds&)? is ambiguous
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6775/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3839/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-10-27 19:21:41.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
